force-app/main/default/objects/Customer__c/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <description>Immutable bank/customer-system key for integration and selective lookup.</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>