force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Approval notification destination. Conditionally required before Approved/Submitted.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>