force-app/main/default/objects/Customer__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Simple eligibility control independent of descriptive Status.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>