force-app/main/default/objects/Customer__c/fields/NationalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NationalIdentifier__c</fullName>
    <description>Optional regulated identifier. Masked; restrict FLS in later security milestone.</description>
    <label>National Identifier</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>