force-app/main/default/objects/Customer__c/fields/RelationshipManager__c.field-meta.xml
<CustomField>
    <fullName>RelationshipManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred relationship manager for routing and escalations.</description>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>