force-app/main/default/objects/Customer__c/validationRules/Active_Status_Consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Status_Consistency</fullName>
    <active>true</active>
    <description>IsActive and Status must not contradict each other.</description>
    <errorConditionFormula>OR(
  AND(NOT(IsActive__c), TEXT(Status__c) &lt;&gt; &quot;Inactive&quot;),
  AND(IsActive__c, TEXT(Status__c) = &quot;Inactive&quot;)
)</errorConditionFormula>
    <errorMessage>Inactive customers must have Status = Inactive, and Active customers cannot use Status = Inactive.</errorMessage>
</ValidationRule>