force-app/main/default/objects/Customer__c/validationRules/National_Identifier_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>National_Identifier_Format</fullName>
    <active>true</active>
    <description>When populated, require digits only (5–30). Error text avoids echoing the value.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(NationalIdentifier__c)),
  NOT(REGEX(NationalIdentifier__c, &quot;^[0-9]{5,30}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>NationalIdentifier__c</errorDisplayField>
    <errorMessage>National identifier format is invalid.</errorMessage>
</ValidationRule>