force-app/main/default/objects/Customer__c/listViews/Requires_Additional_Review.listView-meta.xml
<ListView>
    <fullName>Requires_Additional_Review</fullName>
    <columns>NAME</columns>
    <columns>CustomerNumber__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>RelationshipManager__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requires Additional Review</value>
    </filters>
    <label>Requires Additional Review</label>
</ListView>